--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -287,6 +287,24 @@ body.second-home #scrollUp {
   bottom: 36px;
 }
 
+/*  */
+.btn-theme{
+
+    border-radius: 0;
+    color: #ff9800;
+    border-color: #ff9800;
+    background: transparent;
+    text-transform: capitalize;
+    font-size: 14px;
+    font-weight: 500;
+    cursor: pointer;
+  }
+  .btn-theme:hover{
+    background:#ff9800;
+color: #ffffff;
+border-color: #ff9800;
+  }
+
 /*
 	=================================
 		Preloder
@@ -886,8 +904,8 @@ transform: translateY(0px);
     .link-style-three {
 	margin-top: 51px;
 }
-    
-    
+
+
 }
 .preloader-body {
   position: fixed;
@@ -1081,9 +1099,9 @@ transform: translateY(0px);
  * 0?. Header Styles
  * ---------------------------------------------------------------------------
  */
-/* 
+/*
 	===============================
-		Header Top 
+		Header Top
 	===============================
 */
 
@@ -2029,7 +2047,7 @@ a.yt{background: #ff0000}
     padding: 10px 18px;
   }
 
-    
+
 }
 @media (max-width: 767px) {
   #main-menu-2 .wd-megamenu .menu > ul > li,
@@ -2457,7 +2475,7 @@ a.yt{background: #ff0000}
   #main-slider-section .slider-content br {
     display: none;
   }
- 
+
 
   #message {
     padding: 50px 0 !important;
@@ -2696,7 +2714,7 @@ a.yt{background: #ff0000}
 
 @media (max-width: 1025px) {
   #call-to-action .call-to-action-buy-now {
-    
+
     top: 12px !important;
   }
 }
@@ -3239,7 +3257,7 @@ a.yt{background: #ff0000}
   z-index: -10;
 }
 
-/* 
+/*
 	===============================
 		Shop Section
 	===============================
@@ -3313,7 +3331,7 @@ a.yt{background: #ff0000}
   font-size: 17px;
 }
 
-/* 
+/*
 	===============================
 		News Section
 	===============================
@@ -3435,7 +3453,7 @@ a.yt{background: #ff0000}
 	Shop page Section
 	====================
 */
-/* 
+/*
 	===============================
 		Shop Section
 	===============================
@@ -3502,7 +3520,7 @@ a.yt{background: #ff0000}
   color: #666666;
 }
 
-/* 
+/*
 	===============================
 		Side Bar Section
 	===============================
@@ -3755,7 +3773,7 @@ a.yt{background: #ff0000}
   border-color: #fff #fff #fff;
 }
 
-/* 
+/*
 	===============================
 		Page Location Section
 	===============================
@@ -3780,7 +3798,7 @@ a.yt{background: #ff0000}
   display: none;
 }
 
-/* 
+/*
 	===============================
 		Client Img Section
 	===============================
@@ -3789,7 +3807,7 @@ a.yt{background: #ff0000}
   background: #fff;
 }
 
-/* 
+/*
 	===============================
 		Fix0 Style shop-left-sidebar-page
 	===============================
@@ -3807,7 +3825,7 @@ a.yt{background: #ff0000}
   font-weight: 500;
 }
 
-/* 
+/*
 	==============================================
 		Fix0 Style shop-left-sidebar-full-grid
 	==============================================
@@ -4207,7 +4225,7 @@ canvas {
 }
 .price-history-section .main-price strong {
   font-size: 16px;
-  
+
 padding-top: 10px;
   display: inline-block;
   color: #0065cd;
@@ -4672,7 +4690,7 @@ padding-top: 10px;
   .product-details li {
     display: block !important;
   }
-    
+
   .product-details .page-location li {
 	display: inline-block !important;
 }
@@ -5454,7 +5472,7 @@ padding-top: 10px;
     width: 100%;
   }
 
-  
+
 
   .thumbnail-img img {
     width: 100%;
@@ -6107,13 +6125,13 @@ padding-top: 10px;
 }
 .blog-slider-tow-grid .page-location a {
   color: #fff;
-} 
+}
 .blog-slider-tow-grid .page-location a:hover {
   color: #ff9800 ;
-} 
+}
 .wishlist-slider-section .page-location a {
   color: #000;
-} 
+}
 .wishlist-slider-section .wishlist-slider-title {
 	color: #000;
 }
@@ -6909,7 +6927,7 @@ padding-top: 10px;
 .blog-section {
   /*
   	================
-  	Author Meta Data: 
+  	Author Meta Data:
   	================
   */
   /*
@@ -8077,7 +8095,7 @@ padding-top: 10px;
     font-size: 18px;
     margin-bottom: 15px;
   }
- 
+
   .footer {
     padding: 50px 0 70px;
   }
@@ -8153,7 +8171,7 @@ padding-top: 10px;
     padding: 0;
     margin: 0 0 20px;
   }
- 
+
 
   /* Slider Section */
   #main-slider-section .slider-title {
@@ -8663,8 +8681,8 @@ padding-top: 10px;
 	padding-bottom: 30px;
 	background: #fff;
 }
-.mag-blog-tag a:nth-child(2){background-color: #0096ff;} 
-.mag-blog-tag a:nth-child(3){background-color: #ff3e55;} 
+.mag-blog-tag a:nth-child(2){background-color: #0096ff;}
+.mag-blog-tag a:nth-child(3){background-color: #ff3e55;}
 .mag-blog-content p {
 	color: #888;
 	text-transform: capitalize;
@@ -8682,7 +8700,7 @@ padding-top: 10px;
 	font-size: 14px;
 }
 .mag-sinb-img::before {
- 
+
 background: rgba(255,255,255,0);
 background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(135,135,135,0) 47%, rgba(0,0,0,0.24) 100%);
 background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,0)), color-stop(47%, rgba(135,135,135,0)), color-stop(100%, rgba(0,0,0,0.24)));
@@ -8720,7 +8738,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
   position: absolute;
   top: 0;
   width: 100%;
-    
+
 }
 .maz-blog {
 	padding-bottom: 30px;
@@ -9227,7 +9245,7 @@ span.new {
 }
 .sin-logo img{width: auto!important}
 .slider-countdown{
-    
+
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
@@ -9695,7 +9713,7 @@ box-shadow: 8px 3px 21px 0px rgba(0,0,0,0.22);
 	padding-right: 17px;
 }
 .slider-bg {
-	
+
 	position: relative;
 	width: 100%;
 	height: 60vh;
@@ -9773,13 +9791,13 @@ display: none
 }
 
 @media (min-width: 1200px) and (max-width: 1300px) {
-    
+
   #trending .owl-nav .owl-next {right: -2px !important;}
   #trending .owl-nav .owl-prev {left: -2px !important;}
-    
+
 }
 @media (min-width: 992px) and (max-width: 1199px) {
-    
+
 .blrub-logo {
 	margin: 0px 0;
 }
@@ -9884,7 +9902,7 @@ display: none
     .shop-slider-section#main-slider-section .slider-text {
 	margin-top: 20px;
 }
-    
+
 }
 @media (min-width: 576px) and (max-width: 767px) {
   .footer .footer-view-controller {
@@ -9920,7 +9938,7 @@ display: none
     .holiday-deals {
 	padding: 10px 30px 15px;
 }
-    
+
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .footer .footer-about {
@@ -9948,7 +9966,7 @@ display: none
 }
 #main-slider-section .slider-title {
     font-size: 28px;
-} 
+}
     #main-slider-section .slider-content {
     font-size: 12px;
     margin-bottom: 20px;
@@ -9969,10 +9987,10 @@ display: none
 	height: 41px;
 	margin-top: 0px;
 }
-    
+
 }
 @media (max-width: 991px) {
-    
+
     .compare-btn img {
         width: 28px;
     }
@@ -10004,7 +10022,7 @@ display: none
 	padding-left: 7px;
 	padding-right: 0px;
 }
-    
+
     .ph-search{display: block}
     #wd-header-top .offer-text p {
         font-size: 10px;
@@ -10013,7 +10031,7 @@ display: none
     .account-section i {
 	font-size: 20px;
 	margin-top: 2px;
-}  
+}
 .serch-wrapper {
 	display: inline;
 	float: left;
@@ -10042,8 +10060,8 @@ display: none
 	display: none;
 }
 }
-@media (max-width: 767px) {    
-    
+@media (max-width: 767px) {
+
     #subscribe {
 	text-align: center;
 }
@@ -10323,7 +10341,7 @@ display: none
      .product-details .compare-details-section .full-specifiction {
 	width: 245px;
 }
- /*----------------------------*/   
+ /*----------------------------*/
 }
 
 /*Home page two*/
@@ -10365,7 +10383,7 @@ display: none
 
 	padding: 15px 12px;
 }
-    
+
     .cus-wd-l {
 	width: 75%!important;
 }
@@ -10508,17 +10526,17 @@ display: none
 	padding: 15px;
 }
 
-    
+
 }
 @media (min-width: 1501px) and (max-width: 1640px){
       .second-home #recent-product .recent-product-meta-link a {
 	padding: 8px 10px;
 }
-        
+
 }
 
-@media (min-width: 1501px) and (max-width: 1700px){ 
-    
+@media (min-width: 1501px) and (max-width: 1700px){
+
     .cus-wd-l {
 	width: 60%!important;
 }
@@ -10699,7 +10717,7 @@ display: none
 	margin-top: 13px;
 }
     /*-----------------------------------*/
-    
+
 }
 @media (min-width: 768px) and (max-width: 991px) {
     .menu-mobile {
@@ -10831,7 +10849,7 @@ display: none
     #blog .blog-title {
 	font-size: 16px;
 }
-    
+
     /*-----------------------------------------------*/
 }
 @media (max-width: 768px) {
@@ -10974,16 +10992,16 @@ display: none
 	margin-bottom: 5px !important;
 	font-size: 26px!important;
 }
-    
+
 }
 @media (max-width: 575px) {
-    
-    
+
+
     .third-home .wd-amazon-product-tabs a {
 	margin-bottom: 5px;
 	margin-right: 5px;
 }
-    
+
 .third-home #main-slider-section .slider-text {
 	padding-left: 20px !important;
 	margin-top: 0px !important;
@@ -11168,7 +11186,7 @@ display: none
 	width: 40px;
 	height: 40px;
 }
-    
+
     #main-slider-section .slider-text {
 
 	text-align: center;
@@ -11182,7 +11200,7 @@ display: none
 }
     .holiday-deals {padding: 10px 30px 10px;}
 /*------------------------------------*/
-    
+
 }
 
 /*------------Shortcode css ------------------*/
@@ -11208,7 +11226,7 @@ display: none
 	width: 143px;
 }
 .coupon-bc .input-group-btn > .btn:hover {
-     background: #fdb813; 
+     background: #fdb813;
 }
 .aff-logo a:last-child {
 	color: #ff0048;
@@ -11355,13 +11373,13 @@ display: none
 		text-align: center;
 	}
 
-	
+
 	.urr-con .circle canvas {
 	text-align: left;
 	border-radius: 50%;
 	width: 125px;
 }
-	
+
 	.urr-con .circle div {
 		position: absolute;
 		top: 50%;
@@ -11371,7 +11389,7 @@ display: none
 		text-align: center;
 		line-height: 40px;
 		font-size: 31px;
-		
+
 	}
 	.urr-con .circle strong i {
 		font-style: normal;
@@ -11495,21 +11513,21 @@ display: none
 }
 
 
-@media 
+@media
 only screen and (max-width: 500px) {
 
 	/* Force table to not be like tables anymore */
-	.link-style-one table, .link-style-one thead, .link-style-one tbody, .link-style-one th, .link-style-one td, .link-style-one tr { 
-		display: block; 
+	.link-style-one table, .link-style-one thead, .link-style-one tbody, .link-style-one th, .link-style-one td, .link-style-one tr {
+		display: block;
 	}
-	
+
 	/* Hide table headers (but not display: none;, for accessibility) */
-	.link-style-one thead tr { 
+	.link-style-one thead tr {
 		position: absolute;
 		top: -9999px;
 		left: -9999px;
 	}
-	
+
 	.link-style-one tr { border: 1px solid #ccc; }
 	.link-style-one td {
 	border: none;
@@ -11517,8 +11535,8 @@ only screen and (max-width: 500px) {
 	padding-left: 50%;
 	text-align: center;
 }
-	
-	
+
+
     .link-style-one tbody {
 	border: 0px solid #ddd;
 }
@@ -11530,32 +11548,32 @@ only screen and (max-width: 500px) {
 	width: 110px;
 
 }
-    
-    
-    
-    
-    
-    
 
-	
+
+
+
+
+
+
+
 }
 
-@media 
+@media
     only screen and (max-width: 550px){
-        
-            
+
+
     /* Force table to not be like tables anymore */
-	.link-style-two table, .link-style-two thead, .link-style-two tbody, .link-style-two th, .link-style-two td, .link-style-two tr { 
-		display: block; 
+	.link-style-two table, .link-style-two thead, .link-style-two tbody, .link-style-two th, .link-style-two td, .link-style-two tr {
+		display: block;
 	}
-	
+
 	/* Hide table headers (but not display: none;, for accessibility) */
-	.link-style-two thead tr { 
+	.link-style-two thead tr {
 		position: absolute;
 		top: -9999px;
 		left: -9999px;
 	}
-	
+
 	.link-style-two tr {
 	border: 1px solid #ccc;
 	padding: 10px 0px;
@@ -11566,8 +11584,8 @@ only screen and (max-width: 500px) {
 	padding-left: 50%;
 	text-align: center;
 }
-	
-	
+
+
     .link-style-two tbody {
 	border: 0px solid #ddd;
 }
@@ -11576,7 +11594,7 @@ only screen and (max-width: 500px) {
 	height: 52px;
 	padding: 0;
 }
-        
+
 }
 .product-details .user-rev-rating {
     margin-bottom: 100px;
@@ -11709,7 +11727,7 @@ only screen and (max-width: 500px) {
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-    
+
     .coming-soon-text h1 {font-size: 50px;}
     .coming-soon-text h3 {font-size: 50px!important;}
     .coming-soon .count-down {width: 564px;}
@@ -11719,10 +11737,10 @@ only screen and (max-width: 500px) {
     .coming-soon .wb-social-media {
 	margin-top: 110px;
 }
-    
+
 }
 @media (min-width: 576px) and (max-width: 767px) {
-    
+
 .coming-soon-logo {
 	padding: 30px 0px 50px;
 }
@@ -11735,7 +11753,7 @@ only screen and (max-width: 500px) {
 }
 }
 @media (max-width: 575px) {
-    
+
 .coming-soon-logo {
 	padding: 30px 0px 50px;
 }
@@ -11757,7 +11775,7 @@ only screen and (max-width: 500px) {
 
 	margin-top: 10px;
 }
-    
+
 }
 /*----------------------------------------*/
 /*  14.  404 page
@@ -11799,7 +11817,7 @@ a.go-back {
 	font-weight: 700;
 	padding: 12px 33px;
 	border-radius: 5px;
-    
+
 	display: inline-block;
 }
 a.go-back i{margin-right: 5px}
@@ -11812,7 +11830,7 @@ a.go-back:hover{background: #fff;
 .four-zero-page.footer{border-top: 0px;}
 
 @media (min-width: 768px) and (max-width: 991px) {
-    
+
 .four-0-inner {
 	padding-top: 0px;
 	padding-left: 0px;
@@ -11831,10 +11849,10 @@ a.go-back:hover{background: #fff;
     .four-zero {
 	height: 370px;
 }
-    
+
 }
 
-@media (min-width: 576px) and (max-width: 767px) { 
+@media (min-width: 576px) and (max-width: 767px) {
 
     .four-0-inner {
 	padding-top: 0px;
@@ -11859,10 +11877,10 @@ a.go-back:hover{background: #fff;
     .four-zero {
 	height: 400px;
 }
-    
-    
+
+
 }
-@media (max-width: 575px) { 
+@media (max-width: 575px) {
 
 .four-0-inner {
 	padding-top: 20px;
@@ -11892,8 +11910,8 @@ a.go-back {
     #subscribe.four-zero-page .subscribe-body {
 	transform: translateY(42px);
 }
-    
-    
+
+
 }
 
 
