--- a/resources/views/front/index.html
+++ b/resources/views/front/index.html
@@ -104,7 +104,7 @@
 					<button class="btn btn-primary my-account ml-2  pt-0" data-toggle="modal" data-target=".bd-example-modal-lg2">
 						<i class="fa fa-user" aria-hidden="true"></i> My account
 					</button>
-					<div class="modal fade bd-example-modal-lg2" tabindex="-1" aria-hidden="true">
+					<div class="modal fade bd-example-modal-lg2" tabindex="-1" aria-hidden="true"  data-backdrop="false">
 						<div class="modal-dialog modal-lg">
 							<div class="modal-content">
 								<div class="container">
